<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BDAADF"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/et_nome_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_data_fim"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_inicio" />

    <TextView
        android:id="@+id/tv_data_inicio"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome_projeto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/nome_projeto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bt_data_fim"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:text="@string/bt_data_fim"
        app:layout_constraintStart_toEndOf="@+id/tv_data_fim"
        app:layout_constraintTop_toBottomOf="@+id/bt_data_inicio" />

    <Button
        android:id="@+id/bt_data_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_data_inicio"
        app:layout_constraintStart_toEndOf="@+id/tv_data_inicio"
        app:layout_constraintTop_toBottomOf="@+id/et_nome_projeto" />

    <Button
        android:id="@+id/bt_criar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="156dp"
        android:text="@string/bt_criar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_data_fim" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="96dp"
        android:text="@string/tv_cadastro_projeto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>